--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <ul class="num_photo"><form action="">
                   <li>
                     
-                   <img src="D:\My Website\photo\នំល្ពៅបុក.jpg" alt="">
+                   <img src="https://github.com/Zo00000001/shoes.shop.github.io/tree/main/photo" alt="">
                    <p>នំល្ពៅបុក<input type="checkbox" id="នំល្ពៅបុក" name="នំល្ពៅបុក"></p>
                 </li>
                 
